# course_paper_8

./: .env.sample  Dockerfile  README.md  deploy.sh  docker-compose.yaml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  paginations.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_award.py  0003_alter_habit_period.py  0004_alter_habit_period.py  0005_habit_next_time.py  0006_rename_next_time_habit_next_date.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_telegram_id.py
